--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
   font-family: 'Rubik', sans-serif; /* Set global font to Rubik */
 }
 
-body {
+html,body {
   font-family: 'Rubik', sans-serif; /* Apply Rubik to the body */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -57,15 +58,19 @@ code {
 }
 .button-global1 {
   /* initial styles */
-  color:  #051B23;
-  background-color: #FFC629;
+  color: #FFC629 ;
+  background-color:#051B23 ;
  border:transparent;
-  
+ padding:10px 20px;
+ margin-top:20px;
+  border-radius:4px;
+  font-size:18px;
+  line-height:32px;
 }
 
 .button-global1:hover {
-  color: #FFC629;
-  background-color: #051B23;
+  color: #051B23;
+  background-color: #FFC629;
   transform: translate3d(2px, -2px, 2px);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); /* Add shadow on hover */
 }
